# MessageFrame

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  run_benchmark.bat  run_benchmark.sh
.github/: FUNDING.yml
benchmarks/: benchmark.cpp
examples/: basic_usage.cpp
include/messageframe/: Header.hpp  HybridMessageMap.hpp  MessageFrame.hpp  Structures.hpp  Value.hpp
src/: Header.cpp  HybridMessageMap.cpp  MessageFrame.cpp  Value.cpp
tests/: test_framework.hpp  test_hybrid_map.cpp  test_messageframe_proxy.cpp
